# OCL

./: CMakeLists.txt
Samples/Device/: CMakeLists.txt  main.cpp
Samples/Event/: CMakeLists.txt  Event.cl  main.cpp
Samples/Platform/: CMakeLists.txt  main.cpp
Samples/Program/: CMakeLists.txt  Float3.cl  Program.cl  main.cpp
Samples/ReadWrite/: CMakeLists.txt  main.cpp
Source/: CLBuf.h  CLBuffer.cpp  CLBuffer.h  CLContext.cpp  CLContext.h  CLDevice.cpp  CLDevice.h  CLEvent.cpp  CLEvent.h  CLFlags.h  CLImage.h  CLKernel.cpp  CLKernel.h  CLLocal.h  CLMemMap.cpp  CLMemMap.h  CLPlatform.cpp  CLPlatform.h  CLProgram.cpp  CLProgram.h  CLQueue.cpp  CLQueue.h
Test/: Buff2DMapCopy.cpp  Buff2DReadWrite.cpp  Buff3DMapCopy.cpp  Buff3DReadWrite.cpp  Buffer2D3DCopy.cpp  BufferAsyncWrite.cpp  BufferMapCopy.cpp  BufferReadWrite.cpp  CMakeLists.txt  ContextCreate.cpp  ContextDevice.cpp  EventExecute.cpp  EventMapCopy.cpp  EventReadWrite.cpp  ImageCreation.cpp  ImageMapCopy.cpp  ImageReadWrite.cpp  KernelBtsort.cpp  KernelExecute.cpp  KernelSumup.cpp  ProgramBinary.cpp  Test.cpp  Test.h  program.cl
